--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="test.js"></script>
   </head>
 
   <body>
-    <h1>Hello Plunker!</h1>
+    <h1><!--Hello, Stephen!--></h1>
   </body>
 
 </html>
