Added buttons for playing the game.

--- a/blackjack.html
+++ b/blackjack.html
@@ -6,7 +6,13 @@
   </head>
 
   <body>
-    <h1><!--Hello, Stephen!--></h1>
+    <h1 id="title">Blackjack</h1>
+
+    <p id="text-area">Welcome to Blackjack!</p>
+    <button id = "new-game-button">New Game!</button>
+    <button id = "hit-button">Hit!</button>
+    <button id = "stay-button">Stay</button>
+    
   </body>
   <script src="blackjack.js"></script>
 </html>
